# kedro-profile

./: README.md  RELEASE.md  pyproject.toml
kedro-profile-example/: README.md  pyproject.toml
kedro-profile-example/notebooks/: demo.ipynb
kedro-profile-example/src/kedro_profile_example/: __init__.py  __main__.py  settings.py
src/kedro_profile/: hook.py
tests/: test_profile_hook.py
